--- a/calculadora.html
+++ b/calculadora.html
@@ -12,6 +12,27 @@
     <form action="" name="calc">
         <div class="calculadora">
             <input type="text" id="visor" name="visor">
+            <div id="primeira">
+                <input type="button" value="7" class="botao borda" onclick="botao (value)">
+                <input type="button" value="8" class="botao borda" onclick="botao (value)">
+                <input type="button" value="9" class="botao borda" onclick="botao (value)">
+                <input type="button" value="/" class="botao borda" onclick="botao (value)">
+            </div>
+            <div id="segunda"></div>
+            <input type="button" value="4" class="botao borda" onclick="botao (value)">
+            <input type="button" value="5" class="botao borda" onclick="botao (value)">
+            <input type="button" value="6" class="botao borda" onclick="botao (value)">
+            <input type="button" value="*" class="botao borda" onclick="botao (value)">
+            <div id="terceira"></div>
+            <input type="button" value="1" class="botao borda" onclick="botao (value)">
+            <input type="button" value="2" class="botao borda" onclick="botao (value)">
+            <input type="button" value="3" class="botao borda" onclick="botao (value)">
+            <input type="button" value="+" class="botao borda" onclick="botao (value)">
+            <div id="quarta"></div>
+            <input type="button" value="C" class="botao borda" onclick="reseta">
+            <input type="button" value="0" class="botao borda" onclick="botao (value)">
+            <input type="button" value="=" class="botao borda" onclick="calcula">
+            <input type="button" value="-" class="botao borda" onclick="botao (value)">
         </div>
     </form>
 
