--- a/calculadora.html
+++ b/calculadora.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script language="JavaScript" src="funções.js"></script>
     <title>Document</title>
 </head>
 
@@ -29,9 +30,9 @@
             <input type="button" value="3" class="botao borda" onclick="botao (value)">
             <input type="button" value="+" class="botao borda" onclick="botao (value)">
             <div id="quarta"></div>
-            <input type="button" value="C" class="botao borda" onclick="reseta">
+            <input type="button" value="C" class="botao borda" onclick="reseta (value)">
             <input type="button" value="0" class="botao borda" onclick="botao (value)">
-            <input type="button" value="=" class="botao borda" onclick="calcula">
+            <input type="button" value="=" class="botao borda" onclick="calcula (value)">
             <input type="button" value="-" class="botao borda" onclick="botao (value)">
         </div>
     </form>
