--- a/calculadora.html
+++ b/calculadora.html
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script language="JavaScript" src="funções.js"></script>
-    <title>Document</title>
+    <title>calculadora da Aninha</title>
+    <link rel="stylesheet" href="estilo.css">
 </head>
 
 <body>
@@ -19,21 +20,27 @@
                 <input type="button" value="9" class="botao borda" onclick="botao (value)">
                 <input type="button" value="/" class="botao borda" onclick="botao (value)">
             </div>
-            <div id="segunda"></div>
-            <input type="button" value="4" class="botao borda" onclick="botao (value)">
-            <input type="button" value="5" class="botao borda" onclick="botao (value)">
-            <input type="button" value="6" class="botao borda" onclick="botao (value)">
-            <input type="button" value="*" class="botao borda" onclick="botao (value)">
-            <div id="terceira"></div>
-            <input type="button" value="1" class="botao borda" onclick="botao (value)">
-            <input type="button" value="2" class="botao borda" onclick="botao (value)">
-            <input type="button" value="3" class="botao borda" onclick="botao (value)">
-            <input type="button" value="+" class="botao borda" onclick="botao (value)">
-            <div id="quarta"></div>
-            <input type="button" value="C" class="botao borda" onclick="reseta (value)">
-            <input type="button" value="0" class="botao borda" onclick="botao (value)">
-            <input type="button" value="=" class="botao borda" onclick="calcula (value)">
-            <input type="button" value="-" class="botao borda" onclick="botao (value)">
+            <div id="segunda">
+                <input type="button" value="4" class="botao borda" onclick="botao (value)">
+                <input type="button" value="5" class="botao borda" onclick="botao (value)">
+                <input type="button" value="6" class="botao borda" onclick="botao (value)">
+                <input type="button" value="*" class="botao borda" onclick="botao (value)">
+            </div>
+
+            <div id="terceira">
+                <input type="button" value="1" class="botao borda" onclick="botao (value)">
+                <input type="button" value="2" class="botao borda" onclick="botao (value)">
+                <input type="button" value="3" class="botao borda" onclick="botao (value)">
+                <input type="button" value="+" class="botao borda" onclick="botao (value)">
+            </div>
+
+            <div id="quarta">
+                <input type="button" value="C" class="botao borda" onclick="reseta (value)">
+                <input type="button" value="0" class="botao borda" onclick="botao (value)">
+                <input type="button" value="=" class="botao borda" onclick="calcula (value)">
+                <input type="button" value="-" class="botao borda" onclick="botao (value)">
+            </div>
+
         </div>
     </form>
 
